<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/on_boarding_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoardingActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/on_boarding_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/on_boarding_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

        <!-- markers -->
        <LinearLayout
            android:id="@+id/on_boarding_marker_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/on_boarding_initial_circle"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_green_circle" />

            <View
                android:id="@+id/on_boarding_middle_circle"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_gray_circle" />

            <View
                android:id="@+id/on_boarding_last_circle"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_gray_circle" />
        </LinearLayout>
        <!-- Buttons -->
        <TextView
            android:id="@+id/on_board_sign_up"
            style="@style/App.OnBoarding.Buttons.SignUp"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toStartOf="@+id/on_board_login"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/on_boarding_marker_container" />

        <TextView
            android:id="@+id/on_board_login"
            style="@style/App.OnBoarding.Buttons.Login"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/on_board_sign_up"
            app:layout_constraintTop_toTopOf="@+id/on_board_sign_up" />

        <TextView
            android:id="@+id/on_board_bottom_msg"
            style="@style/App.OnBoarding.BottomMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/on_boarding_bottom_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/on_board_sign_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>